--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,33 +9,30 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/month_image"
             android:layout_width="fill_parent"
             android:layout_height="120dp"
-            android:scaleType="fitXY"
-            android:id="@+id/month_image" />
+            android:scaleType="fitXY" />
 
     </android.support.v7.widget.CardView>
-
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvNumbers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="130dp"/>
+        android:layout_marginTop="130dp" />
 
 
-
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-6574435909968892/9956464463">
-     <!--   ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
+        <!--   ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
     </com.google.android.gms.ads.AdView>
 
 
