--- a/app/src/main/res/layout/image_list.xml
+++ b/app/src/main/res/layout/image_list.xml
@@ -9,8 +9,7 @@
         android:id="@+id/RecyclerViewImageList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical">
-    </android.support.v7.widget.RecyclerView>
+        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
 
