--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="2dp"
+    android:background="@android:color/transparent"
+    android:weightSum="2">
 
     <android.support.v7.widget.CardView
-        android:layout_width="fill_parent"
+        android:layout_width="0dp"
         android:layout_height="130dp"
-        android:elevation="10dp">
+        android:layout_weight="2"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="10dp">
 
 
         <ImageView
@@ -27,10 +31,11 @@
             android:fontFamily="@font/consola"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="17.5sp" />
+            android:textSize="19sp"
+            android:textStyle="bold" />
 
 
     </android.support.v7.widget.CardView>
 
 
-</RelativeLayout>
+</LinearLayout>
